<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_question1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Question3Activity">

    <TextView
        style="@style/Question"
        android:text="@string/question_cryptocurrency" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="24dp">

        <CheckBox
            android:id="@+id/checkbox1Q3"
            style="@style/Button"
            android:background="@drawable/custom_button"
            android:button="@android:color/transparent"
            android:text="@string/answer1_cryptocurrency"
            android:textColor="@drawable/button_text_color" />

        <CheckBox
            android:id="@+id/checkbox2Q3"
            style="@style/Button"
            android:background="@drawable/custom_button"
            android:button="@android:color/transparent"
            android:text="@string/answer2_cryptocurrency"
            android:textColor="@drawable/button_text_color" />

        <CheckBox
            android:id="@+id/checkbox3Q3"
            style="@style/Button"
            android:layout_marginBottom="24dp"
            android:background="@drawable/custom_button"
            android:button="@android:color/transparent"
            android:text="@string/answer3_cryptocurrency"
            android:textColor="@drawable/button_text_color" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView style="@style/BottomBar" />

        <TextView
            android:id="@+id/next"
            style="@style/Next"
            android:text="@string/next" />

        <TextView
            android:id="@+id/previous"
            style="@style/Previous"
            android:text="@string/previous" />

        <TextView
            style="@style/BottomCaption"
            android:text="@string/q3" />

    </RelativeLayout>
</LinearLayout>